# experiments-2025-joms-rag

./: .deepeval-cache.json  .deepeval_telemetry.txt  .gitignore  README.md  pyproject.toml
analysis/: __init__.py  chunk.py  chunks_evaluation.csv  chunks_evaluation_mxbai.csv  chunks_evaluation_nomadic.csv  chunks_evaluation_nomic.csv  generation.py
chroma/: __init__.py  __main__.py  chroma.sqlite3  generate_embeddings.py
chroma/chunk_size_128_overlapping_10/: chroma.sqlite3
chroma/gemini_chunk_size_1024_overlapping_10/: chroma.sqlite3
data/: __init__.py  __main__.ipynb  __main__.py  data.csv
documents/: __init__.py  data-generated.csv  data-sampled.csv  data_0_100.csv  data_1000_1100.csv  data_100_200.csv  data_1100_1200.csv  data_1200_1300.csv  data_1300_1400.csv  data_1400_1500.csv  data_200_300.csv  data_300_400.csv  data_400_500.csv  data_500_600.csv  data_600_700.csv  data_700_800.csv  data_800_900.csv  data_900_1000.csv  data_raw.csv  generation.py  test.csv  test_generated.csv  test_generated_it.csv  train.csv  translatation.py
embedding/: __main__.py
evaluations/: __init__.py  hybrid__gemini-2.0-flash__mxbai-embed-large.pkl_summary.csv  hybrid__gemini-2.0-flash__text-embedding-004.pkl.csv  hybrid__qwen2.5:1.5b__mxbai-embed-large.pkl_summary.csv  hybrid__qwen2.5:1.5b__text-embedding-004.pkl.csv  hybrid__qwen2.5:1.5b__text-embedding-004.pkl_summary.csv  main.py  plot.py  vector_rerank__gemini-2.0-flash__text-embedding-004.pkl_summary.csv  vector_rerank__qwen2.5:1.5b__mxbai-embed-large.pkl_summary.csv  vector_rerank__qwen2.5:1.5b__text-embedding-004.pkl.csv  vector_rerank__qwen2.5:1.5b__text-embedding-004.pkl_summary.csv  vector_store__gemini-2.0-flash__mxbai-embed-large.pkl.csv  vector_store__gemini-2.0-flash__mxbai-embed-large.pkl_summary.csv  vector_store__gemini-2.0-flash__text-embedding-004.pkl.csv  vector_store__qwen2.5:1.5b__mxbai-embed-large.pkl.csv  vector_store__qwen2.5:1.5b__mxbai-embed-large.pkl_summary.csv  vector_store__qwen2.5:1.5b__text-embedding-004.pkl.csv  vector_store__qwen2.5:1.5b__text-embedding-004.pkl_summary.csv
experiments/: main.ipynb
figures/: chunk.py  heatmap.py
generations/: __init__.py  __main__.py  aggregate_csv.py  all_responses.csv  generate_replies.py  hybrid__gemini-2.0-flash__mxbai-embed-large.csv  hybrid__gemini-2.0-flash__mxbai-embed-large.json  hybrid__gemini-2.0-flash__mxbai-embed-large.pkl  hybrid__qwen2.5:1.5b__mxbai-embed-large.csv  hybrid__qwen2.5:1.5b__text-embedding-004.pkl  main.py  results.txt  vector_rerank__gemini-2.0-flash__mxbai-embed-large.json  vector_rerank__qwen2.5:1.5b__mxbai-embed-large.json  vector_rerank__qwen2.5:1.5b__mxbai-embed-large.pkl  vector_rerank__qwen2.5:1.5b__text-embedding-004.pkl  vector_store__gemini-2.0-flash__text-embedding-004.json  vector_store__qwen2.5:1.5b__mxbai-embed-large.csv  vector_store__qwen2.5:1.5b__mxbai-embed-large.json  vector_store__qwen2.5:1.5b__text-embedding-004.pkl  vector_store_rag__qwen2.5:1.5b__mxbai-embed-large.json  vector_store_rag__qwen2.5:1.5b__text-embedding-004.pkl
rag/: __init__.py  bm25_retriever.py  eval.py  hybrid_retriever.py  multi_step_retriever.py  simple_rag.py  vector_rerank_retriever.py  vector_store_retriever.py
utils/: __init__.py  gemini_llm.py
(+692 files in other folders)
