[project]
name = "experiments-2025-joms-rag"
version = "2"
description = ""
authors = [
    {name = "Aqila Farahmand",email = "aqila.farahmand@unibo.it"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "notebook (>=7.4.0,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "spacy    (>= 3.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.0"
jupyterlab = "^4.4.0"

