[project]
name = "experiments-2025-joms-rag"
version = "2"
description = ""
authors = [
    {name = "Aqila Farahmand",email = "aqila.farahmand@unibo.it"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "notebook (>=7.4.0,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "spacy    (>= 3.7.0)",
    "fire (>=0.7.0,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "chromadb (>=1.0.6,<2.0.0)",
    "generativeai (>=0.0.1,<0.0.2)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "google-genai (>=1.10.0,<1.12.0)",
    "llama-index (>=0.12.32,<0.13.0)",
    "llama-index-llms-google-genai (>=0.1.0,<0.2.0)",
    "llama-index-embeddings-google-genai (>=0.1.0,<0.2.0)",
    "deepeval (>=2.7.0,<2.8.0)",
    "llama-index-vector-stores-chroma (>=0.4.1,<0.5.0)",
    "llama-index-retrievers-bm25 (>=0.5.0,<0.6.0)",
    "llama-index-embeddings-ollama (>=0.6.0,<0.7.0)",
    "llama-index-embeddings-huggingface (>=0.5.0,<0.6.0)",
    "llama-index-llms-huggingface (>=0.5.0,<0.6.0)",
    "einops (>=0.6.1,<0.9.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "llama-index-llms-ollama (>=0.5.4,<0.6.0)",
    "base (>=0.0.0,<0.0.1)",
    "llama-index-core (>=0.12.32,<0.13.0)",
    # seaborn installtion
    "seaborn (>=0.13.0,<0.14.0)",
    "ragas (>=0.2.15,<0.3.0)",
    "RapidFuzz (>= 3.13.0,< 4.0.0)",
    "pystemmer (>=2.2.0.1,<3.0.0.0)",
    "stemmer (>=0.0.4,<0.0.5)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.0"
jupyterlab = "^4.4.0"

